--- a/sass/components/_band-student.scss
+++ b/sass/components/_band-student.scss
@@ -20,11 +20,27 @@
     align-items: center;
 
     img {
-      width: 60%;
+      width: 80%;
+      // margin-top: 1rem;
+      @include respond(tab-port) {
+        width: 60%;
+        margin-top: 0;
+      }
+
+      @include respond(phone) {
+        
+        margin-top: 0;
+      }
+
     }
 
     h4 {
-      font-size: 64px;
+      font-size: 40px;
+
+      @include respond(phone) {
+        font-size: 64px;
+      }
+
       text-align: center;
       font-family: 'blen';
       color: $pink;
@@ -33,8 +49,10 @@
     }
 
     .at-Nina-June {
-      display: flex;
-      justify-content: center;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
+      // align-items: center;
 
       width: 100%;
       @include respond(tab-port) {
@@ -46,7 +64,9 @@
 
       a {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        // justify-content: center;
+        align-items: center;
       }
 
       h6 {
@@ -67,7 +87,13 @@
     p {
       font-size: 15px;
       margin-top: 2rem;
-      width: 58%;
+      width: 57%;
+      width: 90%;
+      text-align: center;
+      @include respond(tab-port){
+        width: 57%;
+        text-align: left;
+      }
     }
   }
 }
